--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,28 @@
+html {
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100vh;
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
 }
