--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,13 @@ video {
   width: 100%;
 }
 
+.ani-rotate {
+  animation-name: rotate;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
+
 .vh-10 {
   height: 10vh;
 }
@@ -38,4 +45,18 @@ video {
 
 #target {
   transition: opacity 1s;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
 }
