--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,9 @@
+html {
+  min-height: 100vh;
+}
+
 body {
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -31,6 +36,20 @@ video {
   animation-timing-function: ease;
 }
 
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 400ms ease-in;
+}
+
+.h-fill {
+  height: -webkit-fill-available;
+}
+
 .vh-10 {
   height: 10vh;
 }
@@ -45,6 +64,10 @@ video {
 
 #target {
   transition: opacity 1s;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 @keyframes rotate {
